--- a/NControlDemo/NControlDemo.iOS/NControlDemo.iOS.csproj
+++ b/NControlDemo/NControlDemo.iOS/NControlDemo.iOS.csproj
@@ -28,6 +28,7 @@
     <MtouchUseRefCounting>true</MtouchUseRefCounting>
     <MtouchI18n>
     </MtouchI18n>
+    <MtouchProfiling>true</MtouchProfiling>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
     <DebugType>full</DebugType>
